--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+body {
+  background: #A7FFEB;
+  /* background: #B2DFDB; */
+}
+
 .App {
   text-align: center;
+  /* background: #A7FFEB; // Teal 50 A100 google material design */
+  padding: 0 0.25rem 1rem 0.25rem;
 }
 
 .App-logo {
@@ -7,11 +14,16 @@
   height: 40vmin;
 }
 
+.App-body {
+  margin-top: 15rem;
+}
+
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  padding: 1rem 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -20,6 +32,48 @@
 
 .App-link {
   color: #61dafb;
+  text-decoration: none;
+  text-shadow: 1px 1px #f8f8f8;
+}
+
+.btn-primary {
+  outline: none;
+  padding: 0.125rem 1rem;
+  font-size: 1rem;
+  line-height: 2rem;
+  margin: 0.5rem 1rem;
+  border-radius: 2rem;
+  color: #fff;
+  background: #00897B;
+  border: 1px solid #00897B;
+}
+
+.btn-primary:hover {
+  border: 1px solid #80CBC4;
+  background: #80CBC4;
+  color: #222;
+  transform: scale(1.025);
+}
+
+.input-subscribe {
+  max-width: 50rem;
+  margin: 1rem auto;
+}
+
+.nav-link {
+  color: #00897B;
+}
+
+.navbar-brand {
+  color: #00897B;
+}
+
+.display-1 {
+  margin-top: 5rem;
+}
+
+.input-sub {
+  width: 10rem
 }
 
 @keyframes App-logo-spin {
