--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-  background: #A7FFEB;
+  /* background: #A7FFEB; */
+  background: #222;
   /* background: #B2DFDB; */
 }
 
@@ -19,7 +20,7 @@ body {
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #FFF; */
   /* min-height: 100vh; */
   padding: 1rem 0;
   display: flex;
@@ -27,7 +28,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #fff;
 }
 
 .App-link {
@@ -43,15 +44,15 @@ body {
   line-height: 2rem;
   margin: 0.5rem 1rem;
   border-radius: 2rem;
-  color: #fff;
-  background: #00897B;
+  color: #222;
+  /* background: #00897B; */
   border: 1px solid #00897B;
 }
 
 .btn-primary:hover,
 .btn-primary:active {
   border: 1px solid #80CBC4;
-  background: #80CBC4;
+  /* background: #80CBC4; */
   color: #222;
   transform: scale(1.025);
 }
@@ -71,6 +72,16 @@ body {
 
 .display-1 {
   margin-top: 5rem;
+  font-size: 10rem;
+  font-weight: 600;
+  text-shadow: 5px 5px 10px #fff, 6px 6px 3px yellow,  1px 10px 500px #ff3;
+}
+.display-5 {
+  margin-top: 1rem;
+  font-size: 2rem;
+  font-weight: 500;
+  background: #000;
+  color: #ffc06d;
 }
 
 .input-sub {
@@ -83,5 +94,15 @@ body {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width:600px) {
+
+  .display-1 {
+    margin-top: 5rem;
+    font-size: 5rem;
+    font-weight: 600;
+    text-shadow: 2px 2px 5px #fff, 3px 3px 2px yellow,  1px 3px 180px #ff3;
   }
 }
