--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,7 +1,172 @@
-.bg-dark {
-  background: blue;
-}
+
 
 // .navbar-dark {
 //   background: yellow;
 // }
+
+.header-image {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 2px;
+  z-index: 1;
+  // margin: auto;
+  // padding: 1rem;
+  position: absolute;
+  animation-name: freeflow;
+  animation-duration: 300s;
+}
+// .header-image-overlay {
+//   width: 100%;
+//   height: 30rem;
+//   border-radius: 5px;
+//   z-index: 1;
+//   background-color: #000;
+//   // border: 40px solid #000;
+// }
+
+@media (max-width: 600px) {
+  .header-image {
+    width: 5rem;
+    height: 5rem;
+    border-radius: 2px;
+    z-index: 1;
+    // margin: auto;
+    // padding: 1rem;
+    position: absolute;
+    animation-name: freeflow;
+    animation-duration: 300s;
+  }
+}
+
+
+@keyframes freeflow
+{
+    0% {
+        left: 0;
+        top: 0;
+    }
+    3% {
+        left: 10%;
+        top: 15%;
+    }
+    6% {
+        left: 30%;
+        top: 40%;
+    }
+    10% {
+        left: 60%;
+        top: 5;
+    }
+    13% {
+        left: 80%;
+        top: 30%;
+    }
+    17% {
+        left: 60%;
+        top: 70%;
+    }
+    20% {
+        left: 30%;
+        top: 10%;
+    }
+    23% {
+        left: 50%;
+        top: 90%;
+    }
+    27% {
+        left: 65%;
+        top: 30%;
+    }
+    31% {
+        left: 80%;
+        top: 90%;
+    }
+    35% {
+        left: 50%;
+        top: 80%;
+    }
+    38% {
+        left: 10%;
+        top: 10%;
+    }
+    41% {
+        left: 30%;
+        top: 60%;
+    }
+    45% {
+        left: 70%;
+        top: 70%;
+    }
+    48% {
+        left: 40%;
+        top: 10%;
+    }
+    52% {
+        left: 80%;
+        top: 70%;
+    }
+    56% {
+        left: 60%;
+        top: 20%;
+    }
+    59% {
+        left: 40%;
+        top: 90%;
+    }
+    62% {
+        left: 70%;
+        top: 30%;
+    }
+    64% {
+        left: 55%;
+        top: 60%;
+    }
+    68% {
+        left: 20%;
+        top: 10%;
+    }
+    71% {
+        left: 0;
+        top: 0;
+    }
+    75% {
+        left: 10%;
+        top: 10%;
+    }
+    78% {
+        left: 15%;
+        top: 40%;
+    }
+    81% {
+        left: 20%;
+        top: 5;
+    }
+    83% {
+        left: 25%;
+        top: 30%;
+    }
+    85% {
+        left: 30%;
+        top: 70%;
+    }
+    89% {
+        left: 70%;
+        top: 10%;
+    }
+    92% {
+        left: 20%;
+        top: 90%;
+    }
+    95% {
+        left: 40%;
+        top: 30%;
+    }
+    98% {
+        left: 80%;
+        top: 90%;
+    }
+    100% {
+        left: 100%;
+        top: 10%;
+    }
+}
