add some dynamics using animations

--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,35 @@ body {
   font-size: 10rem;
   font-weight: 600;
   text-shadow: 5px 5px 10px #fff, 6px 6px 3px yellow,  1px 10px 500px #ff3;
+  color: #ffc06d;
+  animation: herotext 300s;
+  /* text-shadow: 2px 2px 4px #fff, 1px 1px 3px yellow; */
 }
+
+@keyframes herotext {
+  0% {
+    color: #ffc06d;
+  }
+  20% {
+    color: #fff;
+  }
+  35% {
+    color: #aqua;
+  }
+  50% {
+    color: #ffc06d;
+  }
+  70% {
+    color: skyblue;
+  }
+  85% {
+    color: green
+  }
+  100% {
+    color: #ffc06d;
+  }
+}
+
 .display-5 {
   margin-top: 1rem;
   font-size: 2rem;
