--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,5 +1,3 @@
-
-
 $primary-font-color: #ffc06d;
 $primary-shadow-color: #fff;
 $secondary-shadow-color: yellow;
@@ -11,73 +9,180 @@ $secondary-shadow-color: yellow;
   color: $primary-font-color;
 }
 
+.cosmos-floating-container {
+  position: relative;
+}
+
 .cosmos-floating {
   color: $primary-font-color;
-  text-shadow: 5px 5px 10px $primary-shadow-color, 6px 6px 3px $secondary-shadow-color;
-  font-size: 5rem;
-  font-weight: 500;
+  text-shadow: 2px 2px 4px $primary-shadow-color, 1px 1px 1px $secondary-shadow-color;
+  z-index: 100;
   position: absolute;
-  animation-name: freetextflow;
-  animation-duration: 350s;
+  animation-name: freetextflow-default;
+  animation-duration: 180s;
+  font-weight: 500;
+  font-size: 2rem;
+  left:100%;
+  top: 16.2%;
 }
 .cosmos-floating1 {
   color: $primary-font-color;
-  text-shadow: 5px 5px 10px $primary-shadow-color, 6px 6px 3px $secondary-shadow-color;
-  font-size: 10rem;
-  font-weight: 600;
+  text-shadow: 5px 5px 4px $primary-shadow-color, 2px 2px 1px $secondary-shadow-color;
   position: absolute;
-  animation-name: freetextflow;
-  animation-duration: 260s;
+  animation-name: freetextflow-default;
+  animation-duration: 165s;
+  font-size: 2rem;
+  font-weight: 500;
+  left:100%;
+  top: 20.75%;
 }
 
 .cosmos-floating2 {
   color: $primary-font-color;
-  text-shadow: 5px 5px 10px $primary-shadow-color, 6px 6px 3px $secondary-shadow-color;
-  font-size: 7rem;
-  font-weight: 500;
+  text-shadow: 2px 2px 4px $primary-shadow-color, 1px 1px 1px $secondary-shadow-color;
   position: absolute;
-  animation-name: freetextflow;
-  animation-duration: 210s;
+  animation-name: freetextflow-default;
+  animation-duration: 150s;
+  font-size: 2rem;
+  font-weight: 500;
+  left:100%;
+  top: 20.9%;
 }
 .cosmos-floating3 {
   color: $primary-font-color;
-  text-shadow: 5px 5px 10px $primary-shadow-color, 6px 6px 3px $secondary-shadow-color;
-  font-size: 3rem;
-  font-weight: 500;
+  text-shadow: 2px 2px 4px $primary-shadow-color, 1px 1px 1px $secondary-shadow-color;
   position: absolute;
-  animation-name: freetextflow;
-  animation-duration: 310s;
+  animation-name: freetextflow-default;
+  animation-duration: 135s;
+  font-size: 2rem;
+  font-weight: 500;
+  left:100%;
+  top: 16%;
 }
 
 .cosmos-floating4 {
   color: $primary-font-color;
-  text-shadow: 5px 5px 10px $primary-shadow-color, 6px 6px 3px $secondary-shadow-color;
-  font-size: 5rem;
-  font-weight: 500;
+  text-shadow: 5px 5px 10px $primary-shadow-color, 6px 6px 1px $secondary-shadow-color;
   position: absolute;
-  animation-name: freetextflow;
-  animation-duration: 270s;
+  animation-name: freetextflow-default;
+  animation-duration: 120s;
+  font-size: 2rem;
+  font-weight: 500;
+  left:100%;
+  top: 21%;
 }
 
 .cosmos-floating5 {
   color: $primary-font-color;
-  text-shadow: 5px 5px 10px $primary-shadow-color, 6px 6px 3px $secondary-shadow-color;
-  font-size: 5rem;
-  font-weight: 500;
+  text-shadow: 5px 5px 10px $primary-shadow-color, 6px 6px 1px $secondary-shadow-color;
   position: absolute;
-  animation-name: freetextflow(70);
-  animation-duration: 320s;
+  animation-name: freetextflow-default;
+  animation-duration: 105s;
+  font-size: 2rem;
+  font-weight: 500;
+  left:100%;
+  top: 21%;
 }
 .header-image {
-  width: 10rem;
-  height: 10rem;
-  border-radius: 2px;
-  z-index: 1;
+  width: 15rem;
+  height: 15rem;
   // margin: auto;
   // padding: 1rem;
   position: absolute;
   animation-name: freeflow;
-  animation-duration: 330s;
+  animation-duration: 20s;
+  border-radius: 2px;
+  z-index: 1;
+  left:49.5%;
+  top: 6%;
+}
+
+.cosmos-floating6 {
+  color: $primary-font-color;
+  text-shadow: 2px 2px 4px $primary-shadow-color, 1px 1px 3px $secondary-shadow-color;
+  z-index: 100;
+  position: absolute;
+  animation-name: freetextflow-default;
+  animation-duration: 180s;
+  z-index: 10;
+  font-weight: 500;
+  font-size: 10rem;
+  left:36.3%;
+  top: 16.2%;
+}
+.cosmos-floating7 {
+  color: $primary-font-color;
+  text-shadow: 5px 5px 4px $primary-shadow-color, 2px 2px 3px $secondary-shadow-color;
+  position: absolute;
+  animation-name: freetextflow-default;
+  animation-duration: 165s;
+  font-size: 7.3rem;
+  font-weight: 500;
+  left:41.55%;
+  top: 20.75%;
+}
+
+.cosmos-floating8 {
+  color: $primary-font-color;
+  text-shadow: 2px 2px 4px $primary-shadow-color, 1px 1px 3px $secondary-shadow-color;
+  position: absolute;
+  animation-name: freetextflow-default;
+  animation-duration: 150s;
+  font-size: 7.5rem;
+  font-weight: 500;
+  left:45.9%;
+  top: 20.9%;
+}
+.cosmos-floating9 {
+  color: $primary-font-color;
+  text-shadow: 2px 2px 4px $primary-shadow-color, 1px 1px 3px $secondary-shadow-color;
+  position: absolute;
+  animation-name: freetextflow-default;
+  animation-duration: 135s;
+  z-index: 115;
+  font-size: 10rem;
+  font-weight: 500;
+  left:49.5%;
+  top: 16%;
+}
+
+.cosmos-floating10 {
+  color: $primary-font-color;
+  text-shadow: 5px 5px 10px $primary-shadow-color, 6px 6px 3px $secondary-shadow-color;
+  position: absolute;
+  animation-name: freetextflow-default;
+  animation-duration: 120s;
+  z-index: 5;
+  font-size: 7.3rem;
+  font-weight: 500;
+  left:55.8%;
+  top: 21%;
+}
+
+.cosmos-floating11 {
+  color: $primary-font-color;
+  text-shadow: 5px 5px 10px $primary-shadow-color, 6px 6px 3px $secondary-shadow-color;
+  position: absolute;
+  animation-name: freetextflow-default;
+  animation-duration: 105s;
+  z-index: 15;
+  font-size: 7.5rem;
+  font-weight: 500;
+  left:60.2%;
+  top: 21%;
+}
+.header-image1 {
+  width: 15rem;
+  height: 15rem;
+  // margin: auto;
+  // padding: 1rem;
+  position: absolute;
+  animation-name: freeflow1;
+  animation-duration: 190s;
+  border-radius: 2px;
+  z-index: 10;
+  left:49.5%;
+  top: 6%;
 }
 // .header-image-overlay {
 //   width: 100%;
@@ -100,8 +205,33 @@ $secondary-shadow-color: yellow;
     animation-name: freeflow;
     animation-duration: 300s;
   }
+  .header-image1 {
+    width: 5rem;
+    height: 5rem;
+    border-radius: 2px;
+    z-index: 1;
+    // margin: auto;
+    // padding: 1rem;
+    position: absolute;
+    animation-name: freeflow1;
+    animation-duration: 300s;
+  }
+  .header-image {
+    width: 7rem;
+    height: 7rem;
+    // margin: auto;
+    // padding: 1rem;
+    position: absolute;
+    animation-name: freeflow;
+    animation-duration: 20s;
+    border-radius: 2px;
+    z-index: 1;
+    left:49.5%;
+    top: 17%;
+  }
+
 }
-@keyframes freeflow
+@keyframes freeflow1
 {
     0% {
         left: 0;
@@ -215,7 +345,7 @@ $secondary-shadow-color: yellow;
     75% {
         left: 10%;
         transform: scale(2.1);
-        top: 10%;
+        top: 20%;
     }
     78% {
         left: 15%;
@@ -242,7 +372,7 @@ $secondary-shadow-color: yellow;
     92% {
         left: 20%;
         transform: scale(0.7);
-        top: 90%;
+        top: 80%;
     }
     95% {
         left: 40%;
@@ -260,7 +390,7 @@ $secondary-shadow-color: yellow;
 }
 
 
-@keyframes freetextflow
+@keyframes freetextflow-default
 {
     0% {
         left: 0;
@@ -363,5 +493,201 @@ $secondary-shadow-color: yellow;
         left: 100%;
         transform: scale(1);
         top: 10%;
+    }
+}
+
+@keyframes freetextflow
+{
+    0% {
+        left: 0;
+        top: 0;
+        transform: scale(0.51);
+    }
+    27% {
+        left: 65%;
+        top: 30%;
+        transform: scale(1.7);
+    }
+    52% {
+        left: 80%;
+        transform: scale(1.1);
+        top: 70%;
+    }
+    75% {
+        left: 10%;
+        transform: scale(2.1);
+        top: 10%;
+    }
+    100% {
+        transform: scale(1);
+        font-weight: 500;
+        font-size: 10rem;
+        left:36.3%;
+        top: 16.2%;
+    }
+}
+
+@keyframes freetextflow1
+{
+    0% {
+        left: 0;
+        top: 0;
+        transform: scale(0.51);
+    }
+    33% {
+        left: 65%;
+        top: 30%;
+        transform: scale(1.7);
+    }
+    66% {
+        left: 80%;
+        transform: scale(1.1);
+        top: 70%;
+    }
+    100% {
+        transform: scale(1);
+        font-size: 7.3rem;
+        font-weight: 500;
+        left:41.55%;
+        top: 20.75%;
+    }
+}
+@keyframes freetextflow2
+{
+    0% {
+        left: 0;
+        top: 0;
+        transform: scale(0.51);
+    }
+    52% {
+        left: 80%;
+        transform: scale(1.1);
+        top: 70%;
+    }
+    75% {
+        left: 40%;
+        transform: scale(2.1);
+        top: 70%;
+    }
+    100% {
+        transform: scale(1);
+        font-size: 7.5rem;
+        font-weight: 500;
+        left:45.9%;
+        top: 20.9%;
+    }
+}
+
+@keyframes freetextflow3
+{
+    0% {
+        left: 0;
+        top: 0;
+        transform: scale(0.51);
+    }
+    52% {
+        left: 55%;
+        transform: scale(1.1);
+        top: 70%;
+    }
+    100% {
+        transform: scale(1);
+        font-size: 10rem;
+        font-weight: 500;
+        left:49.5%;
+        top: 16%;
+    }
+}
+
+@keyframes freetextflow4
+{
+    0% {
+        left: 0;
+        top: 0;
+        transform: scale(0.51);
+    }
+    27% {
+        left: 35%;
+        top: 30%;
+        transform: scale(1.7);
+    }
+    52% {
+        left: 80%;
+        transform: scale(1.1);
+        top: 70%;
+    }
+    75% {
+        left: 30%;
+        transform: scale(2.1);
+        top: 10%;
+    }
+    100% {
+        transform: scale(1);
+        font-size: 7.3rem;
+        font-weight: 500;
+        left:55.8%;
+        top: 21%;
+    }
+}
+
+@keyframes freetextflow5
+{
+    0% {
+        left: 0;
+        top: 0;
+        transform: scale(0.51);
+    }
+    27% {
+        left: 65%;
+        top: 30%;
+        transform: scale(1.7);
+    }
+    52% {
+        left: 40%;
+        transform: scale(1.1);
+        top: 70%;
+    }
+    75% {
+        left: 20%;
+        transform: scale(2.1);
+        top: 10%;
+    }
+    100% {
+        transform: scale(1);
+        font-size: 7.5rem;
+        font-weight: 500;
+        left:60.2%;
+        top: 21%;
+    }
+}
+
+@keyframes freeflow
+{
+    0% {
+        left: 0;
+        top: 0;
+        transform: scale(0.51);
+    }
+    27% {
+        left: 65%;
+        top: 30%;
+        transform: scale(1.7);
+    }
+    52% {
+        left: 80%;
+        transform: scale(1.1);
+        top: 70%;
+    }
+    75% {
+        left: 10%;
+        transform: scale(2.1);
+        top: 10%;
+    }
+    100% {
+        transform: scale(1);
+        border-radius: 2px;
+        z-index: 1;
+        left:49.5%;
+        top: 6%;
     }
 }
