--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,8 @@ body {
   color: #00897B;
 }
 
-.display-1 {
+.display-1,
+.display-3 {
   color: #ffc06d;
   margin-top: 5rem;
   font-size: 10rem;
