--- a/src/containers/pages/blog/blog.scss
+++ b/src/containers/pages/blog/blog.scss
@@ -3,10 +3,28 @@ body {
   /* background: #B2DFDB; */
 }
 
+.Posts {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 80%;
+    // background: #fff;
+    margin: auto;
+}
+
+.posts-fallback {
+  background: #fff;
+  padding: 3% 43.125% 3% 43.125%;
+}
+
 .blog {
   padding: 1rem;
   display: flex;
   flex-wrap: wrap;
+}
+
+.display-3 {
+  font-size: 5rem;
 }
 
 .c12 {
