--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,4 +1,5 @@
 $primary-font-color: #ffc06d;
+$primary-font-color-hover: #ffbb6d;
 $primary-shadow-color: #fff;
 $secondary-shadow-color: yellow;
 
@@ -9,9 +10,74 @@ $secondary-shadow-color: yellow;
   color: $primary-font-color;
 }
 
+.nav-item-active {
+  background: rgba($primary-font-color, 0.2);
+  text-decoration: underline;
+}
+
 .cosmos-floating-container {
   position: relative;
 }
+
+.navbar-brand:hover,
+.nav-link:hover {
+  color: #fff;
+}
+
+.dropdown{
+  display: inline-block;
+  position: relative;
+  z-index: 1100;
+  &:hover {
+    .dropdown-menu {
+      display: block;
+    }
+    .dropdown-toggle {
+      color: #fff;
+    }
+  }
+}
+
+.dropdown-menu {
+  font-weight: 300;
+  text-transform: none;
+  display: none;
+  position: absolute;
+  min-width: 10rem;
+  background-color: transparent;
+  top: 70%;
+  left: 10%;
+  z-index: 1000;
+  float: left;
+  padding: .25rem 0;
+  margin: .125rem 0 0;
+  font-size: 1rem;
+  color: #fff;
+  text-align: left;
+  list-style: none;
+  background-clip: padding-box;
+  border: 1px solid rgba(0,0,0,.15);
+  border-radius: .25rem;
+}
+
+.dropdown-item {
+  text-align: left;
+  color: $primary-font-color;
+  border-radius: 2.25rem;
+  z-index: 1000;
+  &:hover {
+    background: rgba($primary-font-color, 0.25);
+    color: #fff;
+  }
+}
+
+// .dropdown-item {
+//   // display: none;
+//   background: $primary-font-color;
+//   & :hover {
+//       background: $primary-font-color-hover;
+//   }
+// }
 
 .cosmos-floating {
   color: $primary-font-color;
