--- a/src/containers/pages/blog/blog.scss
+++ b/src/containers/pages/blog/blog.scss
@@ -12,6 +12,16 @@ body {
     margin: auto;
 }
 
+.post-summary {
+  width: 50%;
+  text-decoration: none;
+  // background: #fff;
+  &:hover {
+    text-decoration: none;
+    // background: green;
+  }
+}
+
 .posts-fallback {
   background: #fff;
   padding: 3% 43.125% 3% 43.125%;
@@ -24,6 +34,7 @@ body {
 }
 
 .display-3 {
+  margin-top: 6rem;
   font-size: 5rem;
 }
 
